--- a/templates/nft/show.html.twig
+++ b/templates/nft/show.html.twig
@@ -17,7 +17,11 @@
             </tr>
             <tr>
                 <th>Image</th>
-                <td>{{ nft.image }}</td>
+                <td>
+                <td>
+                    <img class="img-fluid m-3 align-self-center" width="150" height="150" src="http://localhost/nftMarketplace/uploads/{{ nft.image }}" alt="Affiche {{ nft.name }}">
+                </td>
+                </td>
             </tr>
             <tr>
                 <th>Quantity</th>
