--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-{#        <script src="{{ asset('script/script.js') }}"></script>#}
+        <script src="{{ asset('script/script.js') }}"></script>
     </body>
 </html>
