--- a/templates/parts/header.html.twig
+++ b/templates/parts/header.html.twig
@@ -15,6 +15,9 @@
                     <a class=" menu m-3 text-white" href="{{ path('app_category_index') }}">Categories</a>
                 </li>
                 <li class="nav-item">
+                    <a class=" menu m-3 text-white" href="{{ path('app_gallery_index') }}">Galleries</a>
+                </li>
+                <li class="nav-item">
                     <a class=" menu  m-3 text-white" href="{{ path('app_nft_index') }}">Nfts</a>
                 </li>
                 <li class="nav-item">
